--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cherrypy (8.1.2-1bb1) UNRELEASED; urgency=medium
+
+  * Balabit patched version
+
+ -- Balabit Platform Team <devnull@dev.null>  Tue, 08 Nov 2016 13:57:23 +0100
+
 cherrypy (8.1.2-1) unstable; urgency=low
 
   * source package automatically created by stdeb 0.8.5
