--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-cherrypy8 (8.1.2-1bb2) UNRELEASED; urgency=medium
+
+  * Balabit patched version
+
+ -- Balabit Platform Team <devnull@dev.null>  Wed, 09 Nov 2016 13:22:23 +0100
+
 cherrypy (8.1.2-1bb1) UNRELEASED; urgency=medium
 
   * Balabit patched version
