debian/changelog: version bumped to 8.1.2-1bb4
Signed-off-by: Balazs Scheidler <balazs.scheidler@balabit.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python3-cherrypy8 (8.1.2-1bb4) xenial; urgency=medium
+
+  * Added patch to implement SO_PEERCRED based authentication for
+    UNIX domain sockets.
+
+ -- Balazs Scheidler <bazsi@bzorp>  Mon, 26 Jun 2017 15:14:40 +0200
+
 python3-cherrypy8 (8.1.2-1bb3) xenial; urgency=medium
 
   * Fixed packaging
