--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-cherrypy8 (8.1.2-1bb8) bionic; urgency=medium
+
+  * Add copyright file to the debian packaging
+
+ -- Platform Team <devnull@dev.null>  Thu, 14 Nov 2019 17:44:42 +0100
+
 python3-cherrypy8 (8.1.2-1bb7) xenial; urgency=medium
 
   *  Allow binding to an ephemeral port. Fixes #645.
